# rust-wasm-gol

./: .gitignore  .ignore  CNAME  Cargo.toml  flake.nix  index.html  rust-analyzer.json  tailwind.config.js
.github/workflows/: deploy.yaml
public/: names.json  patterns.json  styles.css
public/patterns/: 135degreelwsstog.rle  45p25.rle  563p7.rle  86p5.rle  _README_.txt  bidirectionalbeehivestopper.rle  cisheavyweightemulator.rle  cislightweightemulator.rle  cismiddleweightemulator.rle  diehardtetration17uuu3.rle  eater2variant2.rle  hne16t14.rle  l141.rle  longboatspin.rle  otcametapixeloffb3s23.rle  otcametapixelonb3s23.rle  p10pipsquirter.rle  p118centuryhassler.rle  p11bheptominohassler.rle  p15piheptominohassler3.rle  p172piheptominoshuttle.rle  p21honeyfarmhassler7.rle  p21lumpsofmuckshuttle.rle  p23honeyfarmhassler2.rle  p29rpentominohassler2.rle  p35piheptominohassler3.rle  p36gun47x30.rle  p37piheptominohassler.rle  p49bouncerloop.rle  p55glidergun.rle  p75piheptominohassler5.rle  spartangtowtoh.rle
src/: app.rs  arena.rs  button.rs  canvas.rs  draw.rs  hashlife.rs  icons.rs  initializer.mjs  layout.rs  lib.rs  main.rs  meta.rs  parse.rs  quadtree.rs  universe.rs  utils.rs
src/components/: app_menu.rs  backdrop.rs  button.rs  canvas.rs  controls.rs  dialog.rs  input.rs  loading.rs  menu.rs  mod.rs  paste_layer.rs  paste_overlay.rs  pattern_card.rs  pattern_library.rs  popover.rs  selection_layer.rs  selection_menu.rs  selection_overlay.rs  sidebar.rs  status.rs  surface.rs  text.rs  toast.rs  tooltip.rs
