[package]
name = "gol"
version = "0.1.0"
edition = "2024"

[dependencies]
rustc-hash = "2.1.1"
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
icondata = "0.7.0"
leptos = { version = "0.8.15", features = ["csr", "nightly"] }
leptos-use = "0.17.0"
leptos_icons = "0.7.0"
leptos_router = { version = "0.8.11" }
tailwind_fuse = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
js-sys = "0.3.83"
rand = "0.9.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[dependencies.web-sys]
version = "0.3.83"
features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData"
]
